Fixes styling of patterned panel on mobile.

--- a/themes/wwwevergreen/css/src/smacss/layout/_content.scss
+++ b/themes/wwwevergreen/css/src/smacss/layout/_content.scss
@@ -231,8 +231,10 @@
  * 3. Panel Themes
  */
 .theme--pattern{
+	// box model
+	padding: 0 1.5ch;
+	// decoration
 	background-attachment: fixed;
-	background-clip: content-box;
 	background-image: url("/sites/all/themes/wwwevergreen/images/pattern-1.svg");
 	background-size: 10vw;  // Edge
 	background-size: 10vmax;
